# proxmonx

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth_routes.py  helpers.py  routes.py
backend/app/api/routes/: __init__.py  bulk_jobs.py  custom_apps.py  guests.py  settings.py  tasks.py
backend/app/core/: alerting.py  auth.py  bulk_job_store.py  config_store.py  discovery.py  github.py  notifier.py  proxmox.py  scheduler.py  session_store.py  ssh.py  task_store.py
backend/app/detectors/: base.py  bazarr.py  caddy.py  docker_generic.py  gitea.py  homepage.py  http_json.py  immich.py  jackett.py  librespeed_rust.py  ntfy.py  overseerr.py  pbs.py  plex.py  prowlarr.py  qbittorrent.py  radarr.py  registry.py  sabnzbd.py  seer.py  seerr.py  sonarr.py  tautulli.py  traefik.py  truenas.py  utils.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: guest.py
backend/tests/: test_alerting.py  test_auth.py  test_auth_routes.py  test_config_store.py  test_custom_app_defs.py  test_detectors.py  test_discovery.py  test_github.py  test_normalize_version.py  test_notifier.py  test_require_api_key.py  test_routes_helpers.py  test_ssh_version_cmd.py  test_update_task_locking.py
ct/: proxmon.sh
docs/: code-review-full.md  prd-backup-restore.md  prd-bulk-updates.md  prd-logo-clickable-responsive.md  prd-normalize-db.md  prd-per-app-config.md  prd-setup-ui.md  prd.md  ux-spec.md  (+8 more)
(+59 files in other folders)
